fix inputs being round on mobile devices

--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -7,6 +7,7 @@
 
   padding: 0;
   border: none;
+  border-radius: 0;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
 
   font-size: 14px;
